RESOLVED FIXED221522
[LFC][IFC] Incorrect line box height when line-height is set on an empty root inline box
https://bugs.webkit.org/show_bug.cgi?id=221522
Summary [LFC][IFC] Incorrect line box height when line-height is set on an empty root...
alan
Reported 2021-02-06 11:50:05 PST
<style> div { line-height: 100px; } </style> <div><span>empty root inline box</span></div> ^^this should produce a ~100px tall line box.
Attachments
Patch (2.56 KB, patch)
2021-02-06 11:54 PST, alan
ews-feeder: commit-queue-
Patch (4.78 KB, patch)
2021-02-06 14:27 PST, alan
no flags
Patch (5.67 KB, patch)
2021-02-06 19:48 PST, alan
no flags
alan
Comment 1 2021-02-06 11:54:30 PST
alan
Comment 2 2021-02-06 14:27:57 PST
alan
Comment 3 2021-02-06 19:48:00 PST
EWS
Comment 4 2021-02-06 21:08:20 PST
Committed r272468: <https://commits.webkit.org/r272468> All reviewed patches have been landed. Closing bug and clearing flags on attachment 419521 [details].
Radar WebKit Bug Importer
Comment 5 2021-02-10 14:36:55 PST
Note You need to log in before you can comment on or make changes to this bug.