[LFC][IFC] Incorrect line box height when line-height is set on an empty root inline box https://bugs.webkit.org/show_bug.cgi?id=221522

Reviewed by Antti Koivisto.

The root inline box with non-initial line height value stretches the line box even when root has no content.

e.g. <div style="line-height: 100px;"><span>content</span></div>
This content produces a ~100px tall line box.

* layout/inlineformatting/InlineFormattingContextQuirks.cpp:
(WebCore::Layout::InlineFormattingContext::Quirks::inlineLevelBoxAffectsLineBox const):


Canonical link: https://commits.webkit.org/233782@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272468 268f45cc-cd09-0410-ab3c-d52691b4dbfc